# padestrian

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: refresh-listings.yml
app/: globals.css  layout.tsx  page.tsx
app/api/import-kijiji/: route.ts
app/api/refresh-kijiji/: route.ts
components/map/: address-search.tsx  filter-panel.tsx  grocery-popup.tsx  kijiji-import-form.tsx  kijiji-list-panel.tsx  listing-popup.tsx  map-view.tsx
components/ui/: pedestrian-toggle.tsx  slider.tsx  switch.tsx
data/: README.md  groceries.geojson  listings.geojson  listings.json  listings.kijiji.json  overpass-groceries.ql  validation_30.csv  validation_30_filled.csv
lib/: custom-listing.ts  kijiji-import.ts  kijiji-listings.ts  listing-filters.ts  saved-kijiji-imports.ts  score-point.ts
padestrian/: cli.py  config.py  db.py  fetch_groceries.py  filter_listings.py  geocode.py  groceries.py  grocery_catalog.py  kijiji_fetch.py  listings.py  municipal_addresses.py  osm_addresses.py  paths.py  prune_kijiji.py  scraper.py  transit_proximity.py  validate_scoring.py
public/data/: groceries-points.geojson  listings-scored.geojson  listings.geojson  listings.json  listings.kijiji.json  listings.static.json  stops.geojson
public/data/isochrones/: smoke.geojson
public/data/zones/: grocery-10min.geojson  grocery-15min.geojson  grocery-20min.geojson  transit-10min.geojson  transit-15min.geojson  transit-20min.geojson
scripts/: generate_map_icons.py
web/: app.js  index.html  style.css
