[project]
name = "padestrian"
version = "0.1.0"
description = "Walkable apartment hunting with real pedestrian routes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "playwright>=1.44,<2",
    "python-dotenv>=1.0,<2",
    "shapely>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["padestrian*"]

[tool.ruff]
line-length = 100
target-version = "py311"
